# irobot-edu-python-sdk

./: LICENSE.txt  README.md  pyproject.toml
examples/bonus/: complex_numbers.py  globals.py
examples/create3_robots/: cliff_sensors.py  docking.py  get_position.py  ir_proximity_light.py  ir_proximity_note.py  ir_proximity_obstacles.py  ir_proximity_print.py  navigation.py  touch_music.py
examples/root_robots/: bumpers_say.py  cliff_sensor.py  color_getters.py  color_scanner.py  get_position.py  getters_color.py  light_sensors.py  line_follower_events_3_areas.py  line_follower_events_5_areas.py  memory_game.py  navigation.py  talk_and_walk.py  touch_music.py  unicorn.py
examples/tutorial/: 10a_functions.py  10b_functions.py  11_classes.py  12_micropip_art.py  13_micropip_table2ascii.py  14_hello_robots.py  15_turn.py  16_square.py  17_set_lights_rgb.py  18_light_effects.py  19_play_frequencies.py  1_hello_python.py  20_spiral_turtle.py  21_spiral_set_speeds.py  22_tasks.py  23_bumpers_print.py  24_tasks_and_loops.py  25_bumper_tasks.py  26_sing_and_walk.py  27_robot_info.py  28_square_stoppable.py  29_recursive_snowflake_fractal.py  2_numbers.py  3_import.py  4a_variables.py  4b_variables.py  5a_strings.py  5b_strings.py  6_if.py  7_loops.py  8a_containers.py  (+2 more)
examples_experimental/: multidrive.py
examples_turtle/: README.md  robot_turtle_draw_polygon.py  robot_turtle_example.py  robot_turtle_init_repl.py
irobot_edu_sdk/: color.py  completer.py  create3.py  event.py  getter_types.py  music.py  packet.py  robot.py  robot_turtle.py  robots.py  root.py  utils.py
(+22 files in other folders)
