[tool.poetry]
name = "irobot_edu_sdk"
version = "0.1.0"
description = "Python SDK for iRobot Edu robots"
authors = ["iRobot Corporation <education@irobot.com>"]
license = "The 3-Clause BSD License"
readme = "README.md"
homepage = "https://github.com/RootRobotics/root-robot-python-sdk"
packages = [
    { include = "irobot_edu_sdk" },
]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.4"
bleak = "^0.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
