[tool.poetry]
name = "irobot_edu_sdk"
version = "0.5.0"
description = "Python SDK for iRobot Edu robots"
authors = ["iRobot Corporation <education@irobot.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://python.irobot.com"
repository = "https://github.com/iRobotEducation/irobot-edu-python-sdk"
packages = [
    { include = "irobot_edu_sdk" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.4"
bleak = "^0.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
